--- a/config/etk/zone_field_mappings.json
+++ b/config/etk/zone_field_mappings.json
@@ -3,6 +3,30 @@
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text",
+    "indexed.address.gurobi.inferlink_description.value",
+    "indexed.address.gurobi.content_strict.value",
+    "indexed.address.gurobi.title.value",
+    "indexed.address.gurobi.other_segment.value",
+    "indexed.address.extract_from_landmark.inferlink_description.value",
+    "indexed.address.extract_from_landmark.content_strict.value",
+    "indexed.address.extract_from_landmark.title.value",
+    "indexed.address.extract_from_landmark.other_segment.value",
+    "indexed.address.other_method.inferlink_description.value",
+    "indexed.address.other_method.content_strict.value",
+    "indexed.address.other_method.title.value",
+    "indexed.address.other_method.other_segment.value",
+    "indexed.age.gurobi.inferlink_description.value",
+    "indexed.age.gurobi.content_strict.value",
+    "indexed.age.gurobi.title.value",
+    "indexed.age.gurobi.other_segment.value",
+    "indexed.age.extract_from_landmark.inferlink_description.value",
+    "indexed.age.extract_from_landmark.content_strict.value",
+    "indexed.age.extract_from_landmark.title.value",
+    "indexed.age.extract_from_landmark.other_segment.value",
+    "indexed.age.other_method.inferlink_description.value",
+    "indexed.age.other_method.content_strict.value",
+    "indexed.age.other_method.title.value",
+    "indexed.age.other_method.other_segment.value",
     "indexed.city.gurobi.inferlink_description.value",
     "indexed.city.gurobi.content_strict.value",
     "indexed.city.gurobi.title.value",
@@ -27,22 +51,6 @@
     "indexed.country.other_method.content_strict.value",
     "indexed.country.other_method.title.value",
     "indexed.country.other_method.other_segment.value",
-    "content_extraction.content_relaxed.text",
-    "content_extraction.content_strict.text",
-    "content_extraction.title.text",
-    "indexed.age.gurobi.inferlink_description.value",
-    "indexed.age.gurobi.content_strict.value",
-    "indexed.age.gurobi.title.value",
-    "indexed.age.gurobi.other_segment.value",
-    "indexed.age.extract_from_landmark.inferlink_description.value",
-    "indexed.age.extract_from_landmark.content_strict.value",
-    "indexed.age.extract_from_landmark.title.value",
-    "indexed.age.extract_from_landmark.other_segment.value",
-    "indexed.age.other_method.inferlink_description.value",
-    "indexed.age.other_method.content_strict.value",
-    "indexed.age.other_method.title.value",
-    "indexed.age.other_method.other_segment.value",
-    "content_extraction.title.text",
     "indexed.email.gurobi.inferlink_description.value",
     "indexed.email.gurobi.content_strict.value",
     "indexed.email.gurobi.title.value",
@@ -79,6 +87,18 @@
     "indexed.eye_color.other_method.content_strict.value",
     "indexed.eye_color.other_method.title.value",
     "indexed.eye_color.other_method.other_segment.value",
+    "indexed.gender.gurobi.inferlink_description.value",
+    "indexed.gender.gurobi.content_strict.value",
+    "indexed.gender.gurobi.title.value",
+    "indexed.gender.gurobi.other_segment.value",
+    "indexed.gender.extract_from_landmark.inferlink_description.value",
+    "indexed.gender.extract_from_landmark.content_strict.value",
+    "indexed.gender.extract_from_landmark.title.value",
+    "indexed.gender.extract_from_landmark.other_segment.value",
+    "indexed.gender.other_method.inferlink_description.value",
+    "indexed.gender.other_method.content_strict.value",
+    "indexed.gender.other_method.title.value",
+    "indexed.gender.other_method.other_segment.value",
     "indexed.hair_color.gurobi.inferlink_description.value",
     "indexed.hair_color.gurobi.content_strict.value",
     "indexed.hair_color.gurobi.title.value",
@@ -127,9 +147,6 @@
     "indexed.phone.other_method.content_strict.value",
     "indexed.phone.other_method.title.value",
     "indexed.phone.other_method.other_segment.value",
-    "content_extraction.content_relaxed.text",
-    "content_extraction.content_strict.text",
-    "content_extraction.title.text",
     "indexed.posting_date.gurobi.inferlink_description.key",
     "indexed.posting_date.gurobi.content_strict.key",
     "indexed.posting_date.gurobi.title.key",
@@ -154,6 +171,18 @@
     "indexed.price.other_method.content_strict.value",
     "indexed.price.other_method.title.value",
     "indexed.price.other_method.other_segment.value",
+    "indexed.review_id.gurobi.inferlink_description.value",
+    "indexed.review_id.gurobi.content_strict.value",
+    "indexed.review_id.gurobi.title.value",
+    "indexed.review_id.gurobi.other_segment.value",
+    "indexed.review_id.extract_from_landmark.inferlink_description.value",
+    "indexed.review_id.extract_from_landmark.content_strict.value",
+    "indexed.review_id.extract_from_landmark.title.value",
+    "indexed.review_id.extract_from_landmark.other_segment.value",
+    "indexed.review_id.other_method.inferlink_description.value",
+    "indexed.review_id.other_method.content_strict.value",
+    "indexed.review_id.other_method.title.value",
+    "indexed.review_id.other_method.other_segment.value",
     "indexed.service.gurobi.inferlink_description.value",
     "indexed.service.gurobi.content_strict.value",
     "indexed.service.gurobi.title.value",
