--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -1,10 +1,12 @@
 {
+  "address": "Address",
   "age": "Age",
   "city": "City",
   "country": "Country",
   "email": "Email",
   "ethnicity": "Ethnicity",
   "eye_color": "EyeColor",
+  "gender": "Gender",
   "hair_color": "HairColor",
   "height": "Height",
   "location": "Location",
@@ -12,6 +14,7 @@
   "phone": "Phone",
   "posting_date": "PostingDate",
   "price": "Price",
+  "review_id": "ReviewId",
   "service": "Service", 
   "state": "State",
   "title": "Title",
