--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -4,6 +4,23 @@
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
+  "Address":[
+    "indexed.address.gurobi.inferlink_description.value",
+    "indexed.address.gurobi.content_strict.value",
+    "indexed.address.gurobi.title.value",
+    "indexed.address.gurobi.other_segment.value",
+    "indexed.address.extract_from_landmark.inferlink_description.value",
+    "indexed.address.extract_from_landmark.content_strict.value",
+    "indexed.address.extract_from_landmark.title.value",
+    "indexed.address.extract_from_landmark.other_segment.value",
+    "indexed.address.other_method.inferlink_description.value",
+    "indexed.address.other_method.content_strict.value",
+    "indexed.address.other_method.title.value",
+    "indexed.address.other_method.other_segment.value",
+    "content_extraction.content_relaxed.text",
+    "content_extraction.content_strict.text",
+    "content_extraction.title.text"
+  ],
   "City":[
     "indexed.city.gurobi.inferlink_description.value",
     "indexed.city.gurobi.content_strict.value",
@@ -98,6 +115,23 @@
     "indexed.eye_color.other_method.content_strict.value",
     "indexed.eye_color.other_method.title.value",
     "indexed.eye_color.other_method.other_segment.value",
+    "content_extraction.content_relaxed.text",
+    "content_extraction.content_strict.text",
+    "content_extraction.title.text"
+  ],
+  "Gender":[
+    "indexed.gender.gurobi.inferlink_description.value",
+    "indexed.gender.gurobi.content_strict.value",
+    "indexed.gender.gurobi.title.value",
+    "indexed.gender.gurobi.other_segment.value",
+    "indexed.gender.extract_from_landmark.inferlink_description.value",
+    "indexed.gender.extract_from_landmark.content_strict.value",
+    "indexed.gender.extract_from_landmark.title.value",
+    "indexed.gender.extract_from_landmark.other_segment.value",
+    "indexed.gender.other_method.inferlink_description.value",
+    "indexed.gender.other_method.content_strict.value",
+    "indexed.gender.other_method.title.value",
+    "indexed.gender.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
@@ -235,6 +269,23 @@
     "indexed.price.other_method.content_strict.value",
     "indexed.price.other_method.title.value",
     "indexed.price.other_method.other_segment.value"
+  ],
+  "ReviewId":[
+    "indexed.review_id.gurobi.inferlink_description.value",
+    "indexed.review_id.gurobi.content_strict.value",
+    "indexed.review_id.gurobi.title.value",
+    "indexed.review_id.gurobi.other_segment.value",
+    "indexed.review_id.extract_from_landmark.inferlink_description.value",
+    "indexed.review_id.extract_from_landmark.content_strict.value",
+    "indexed.review_id.extract_from_landmark.title.value",
+    "indexed.review_id.extract_from_landmark.other_segment.value",
+    "indexed.review_id.other_method.inferlink_description.value",
+    "indexed.review_id.other_method.content_strict.value",
+    "indexed.review_id.other_method.title.value",
+    "indexed.review_id.other_method.other_segment.value",
+    "content_extraction.content_relaxed.text",
+    "content_extraction.content_strict.text",
+    "content_extraction.title.text"
   ],
   "Service": [
     "indexed.service.gurobi.inferlink_description.value",
