Add mappings for services and street_address predicates

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -16,7 +16,9 @@
   "price": "Price",
   "review_id": "ReviewId",
   "service": "Service", 
+  "services": "Service",
   "state": "State",
+  "street_address": "Address",
   "title": "Title",
   "weight": "Weight",
   "tld": "TopLevelDomain",
