--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -17,6 +17,30 @@
     "indexed.address.other_method.content_strict.value",
     "indexed.address.other_method.title.value",
     "indexed.address.other_method.other_segment.value",
+    "indexed.city.gurobi.inferlink_description.value",
+    "indexed.city.gurobi.content_strict.value",
+    "indexed.city.gurobi.title.value",
+    "indexed.city.gurobi.other_segment.value",
+    "indexed.city.extract_from_landmark.inferlink_description.value",
+    "indexed.city.extract_from_landmark.content_strict.value",
+    "indexed.city.extract_from_landmark.title.value",
+    "indexed.city.extract_from_landmark.other_segment.value",
+    "indexed.city.other_method.inferlink_description.value",
+    "indexed.city.other_method.content_strict.value",
+    "indexed.city.other_method.title.value",
+    "indexed.city.other_method.other_segment.value",
+    "indexed.state.gurobi.inferlink_description.value",
+    "indexed.state.gurobi.content_strict.value",
+    "indexed.state.gurobi.title.value",
+    "indexed.state.gurobi.other_segment.value",
+    "indexed.state.extract_from_landmark.inferlink_description.value",
+    "indexed.state.extract_from_landmark.content_strict.value",
+    "indexed.state.extract_from_landmark.title.value",
+    "indexed.state.extract_from_landmark.other_segment.value",
+    "indexed.state.other_method.inferlink_description.value",
+    "indexed.state.other_method.content_strict.value",
+    "indexed.state.other_method.title.value",
+    "indexed.state.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
