Add content semantic type

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -2,6 +2,7 @@
   "address": "Address",
   "age": "Age",
   "city": "City",
+  "content": "Content",
   "country": "Country",
   "email": "Email",
   "ethnicity": "Ethnicity",
