--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -275,15 +275,12 @@
     "indexed.posting_date.gurobi.inferlink_description.key",
     "indexed.posting_date.gurobi.content_strict.key",
     "indexed.posting_date.gurobi.title.key",
-    "indexed.posting_date.gurobi.other_segment.key",
     "indexed.posting_date.extract_from_landmark.inferlink_description.key",
     "indexed.posting_date.extract_from_landmark.content_strict.key",
     "indexed.posting_date.extract_from_landmark.title.key",
-    "indexed.posting_date.extract_from_landmark.other_segment.key",
     "indexed.posting_date.other_method.inferlink_description.key",
     "indexed.posting_date.other_method.content_strict.key",
-    "indexed.posting_date.other_method.title.key",
-    "indexed.posting_date.other_method.other_segment.key"
+    "indexed.posting_date.other_method.title.key"
   ],
   "Price": [
     "indexed.price.gurobi.inferlink_description.value",
