Add raw content and fix posting date

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -13,6 +13,7 @@
   "location": "Location",
   "name": "Name",
   "phone": "Phone",
+  "post_date": "PostingDate",
   "posting_date": "PostingDate",
   "price": "Price",
   "review_id": "ReviewId",
