--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -165,7 +165,18 @@
             ],
             "excluded_source_fields": [
               "content_extraction.content_relaxed.text",
-              "raw_content"
+              "raw_content",
+              "*.provenance.extracted_value",
+              "*.provenance.confidence.extraction",
+              "*.provenance.method",
+              "*.provenance.source.segment",
+              "*.provenance.source.document_id",
+              "*.provenance.source.context.end",
+              "*.provenance.source.context.start",
+              "*.provenance.source.context.tokens_left",
+              "*.provenance.source.context.tokens_right",
+              "*.provenance.source.context.input",
+              "*.confidence"
             ],
             "highlight": {
               "fields": {
