--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -176,8 +176,7 @@
               "*.provenance.source.context.start",
               "*.provenance.source.context.tokens_left",
               "*.provenance.source.context.tokens_right",
-              "*.provenance.source.context.input",
-              "*.confidence"
+              "*.provenance.source.context.input"
             ],
             "highlight": {
               "fields": {
