Add support for social media id in static etk config

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -20,6 +20,7 @@
   "review_site_id": "ReviewId",
   "service": "Service", 
   "services": "Service",
+  "social_media_id": "SocialMediaId",
   "state": "State",
   "street_address": "Address",
   "title": "Title",
