--- a/config/etk/type_field_group_by_mappings.json
+++ b/config/etk/type_field_group_by_mappings.json
@@ -50,6 +50,9 @@
   "Service": [
     "indexed.service.high_confidence_keys"
   ],
+  "SocialMediaId":[
+    "indexed.social_media_id.high_confidence_keys"
+  ],
   "State": [
     "indexed.state.high_confidence_keys"
   ],
