Add support for searching on email key

--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -108,13 +108,21 @@
     "indexed.email.gurobi.title.value",
     "indexed.email.gurobi.other_segment.value",
     "indexed.email.extract_from_landmark.inferlink_description.value",
+    "indexed.email.extract_from_landmark.inferlink_description.key",
     "indexed.email.extract_from_landmark.content_strict.value",
+    "indexed.email.extract_from_landmark.content_strict.key",
     "indexed.email.extract_from_landmark.title.value",
+    "indexed.email.extract_from_landmark.title.key",
     "indexed.email.extract_from_landmark.other_segment.value",
+    "indexed.email.extract_from_landmark.other_segment.key",
     "indexed.email.other_method.inferlink_description.value",
+    "indexed.email.other_method.inferlink_description.key",
     "indexed.email.other_method.content_strict.value",
+    "indexed.email.other_method.content_strict.key",
     "indexed.email.other_method.title.value",
+    "indexed.email.other_method.title.key",
     "indexed.email.other_method.other_segment.value",
+    "indexed.email.other_method.other_segment.key",
     "content_extraction.title.text",
     "raw_content"
   ],
