Add website semantic type with default weights

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -26,5 +26,6 @@
   "title": "Title",
   "weight": "Weight",
   "tld": "TopLevelDomain",
-  "url": "URL"
+  "url": "URL",
+  "website": "Website"
 }
