--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -118,6 +118,14 @@
               }
             },
             "indexed": {
+              "website": {
+                "*": {
+                  "*": {
+                    "value": 2.1,
+                    "key": 15.1
+                  }
+                }
+              },
               "*": {
                 "extract_from_landmark": {
                   "*": {
