Disable table content extractions in default mapping

--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -58,6 +58,9 @@
             "inferlink_extractions": {
               "enabled": false
             },
+            "table": {
+              "enabled": false
+            },
             "title" : {
               "properties" : {
                 "data_extraction": {
