--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -176,6 +176,7 @@
           "elasticsearch_compiler_options": {
             "convert_text_filters_to_shoulds": true,
             "boost_musts": true,
+            "boost_shoulds": true,
             "filter_for_fields_of_unbound_variables": false,
             "default_source_fields": [
               "doc_id",
