--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -183,7 +183,8 @@
               "url",
               "knowledge_graph.*",
               "content_extraction.content_strict.text",
-              "content_extraction.title.text"
+              "content_extraction.title.text",
+              "objects.*"
             ],
             "excluded_source_fields": [
               "content_extraction.content_relaxed.text",
@@ -197,7 +198,8 @@
               "*.provenance.source.context.start",
               "*.provenance.source.context.tokens_left",
               "*.provenance.source.context.tokens_right",
-              "*.provenance.source.context.input"
+              "*.provenance.source.context.input",
+              "objects.response_headers.*"
             ],
             "highlight": {
               "fields": {
