disable response headers

--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -137,6 +137,9 @@
           "type" : "date",
           "format" : "strict_date_optional_time||epoch_millis"
         },
+        "response_headers" : {
+          "enabled": false
+        },
         "tld": {
           "type": "string",
             "fields" : {
