Don't analyze cdr version field in default mapping

--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -162,6 +162,10 @@
             }
           },
           "analyzer" : "url_component_analyzer"
+        },
+        "version": {
+          "type": "string",
+          "index": "not_analyzed"
         }
       }
     }
