--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ deploy:
     tags: true
     all_branches: true
 - provider: script
-  script: docker_deploy.sh
+  script: ./docker_deploy.sh
   on:
     tags: true
     all_branches: true
