--- a/.travis.yml
+++ b/.travis.yml
@@ -40,3 +40,7 @@ deploy:
   on:
     tags: true
     all_branches: true
+- provider: script
+  script: ./docker_deploy.sh
+  on:
+    branch: master
