Set extra_minimum_should_match to 0 in default_config for configs generated from mydig configs

--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -175,6 +175,7 @@
         {
           "elasticsearch_compiler_options": {
             "convert_text_filters_to_shoulds": true,
+            "extra_minimum_should_match": 0,
             "boost_shoulds": true,
             "filter_for_fields_of_unbound_variables": false,
             "default_source_fields": [
