Add support for image predicate in default and generated mappings

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -10,6 +10,7 @@
   "gender": "Gender",
   "hair_color": "HairColor",
   "height": "Height",
+  "image": "Image",
   "location": "Location",
   "name": "Name",
   "phone": "Phone",
