--- a/config/etk/type_field_group_by_mappings.json
+++ b/config/etk/type_field_group_by_mappings.json
@@ -32,6 +32,9 @@
   "Height": [
     "indexed.height.high_confidence_keys"
   ],
+  "Image": [
+    "objects.obj_stored_url"
+  ],
   "Name": [
     "indexed.name.high_confidence_keys"
   ],
