Change image field to img_sha1 from obj_stored_url

--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -81,7 +81,7 @@
               "tld"
             ],
             "image": [
-              "objects.obj_stored_url"
+              "objects.img_sha1"
             ]
           }
         },
@@ -99,7 +99,7 @@
               "url.raw"
             ],
             "image": [
-              "objects.obj_stored_url"
+              "objects.img_sha1"
             ]
           }
         },
