--- a/config/etk/type_field_group_by_mappings.json
+++ b/config/etk/type_field_group_by_mappings.json
@@ -33,7 +33,7 @@
     "indexed.height.high_confidence_keys"
   ],
   "Image": [
-    "objects.obj_stored_url"
+    "objects.img_sha1"
   ],
   "Name": [
     "indexed.name.high_confidence_keys"
