--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -157,7 +157,7 @@
     "indexed.height.other_method.other_segment.value"
   ],
   "Image": [
-    "objects.obj_stored_url"
+    "objects.img_sha1"
   ],
   "Location": [
     "indexed.city.extract_from_landmark.inferlink_description.value",
