--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -20,13 +20,10 @@ WORKDIR /etc/sandpaper
 EXPOSE 9876
 ENTRYPOINT ["/etc/sandpaper/docker-entrypoint.sh"]
 
-RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip install --no-cache-dir digsandpaper"
-RUN /bin/bash -c "source ~/elasticsearch5/bin/activate && ES_MAJOR_VERSION=5 pip install --no-cache-dir digsandpaper"
+COPY . /etc/sandpaper
 
-RUN mkdir -p /etc/sandpaper/bin
-RUN mkdir -p /etc/sandpaper/config
+RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip install --no-cache-dir -e /etc/sandpaper"
+RUN /bin/bash -c "source ~/elasticsearch5/bin/activate && ES_MAJOR_VERSION=5 pip install --no-cache-dir -e /etc/sandpaper"
 
-COPY bin/* /etc/sandpaper/bin/
-COPY start.py /etc/sandpaper/
-COPY config/sandpaper.json /etc/sandpaper/config
 VOLUME /etc/sandpaper/config
+
