--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -19,6 +19,7 @@ WORKDIR /etc/sandpaper
 
 EXPOSE 9876
 ENTRYPOINT ["/etc/sandpaper/docker-entrypoint.sh"]
+CMD ["--config", "config/sandpaper.json", "--host", "0.0.0.0", "--endpoint", "http://elasticsearch:9200"]
 
 RUN git clone https://github.com/usc-isi-i2/dig-sandpaper.git .
 RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip install --no-cache-dir -e /etc/sandpaper"
